--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'BF'
 - !lcsh 'New Thought'
+- GITenberg
 tableOfContents: Infinite life and power -- The overcoming of life's difficulties
   -- Fate or free-will? -- Cause and effect -- Success -- Health -- The secret of
   abundant supply -- The power and limitations of the sub-conscious mind -- The use
